   which made sound, has been deprecated, and may soon be removed; don't use
   it. Just pass the correct dbrefs to the notify*() functions if something 
   talks. [MG]
 * Several of the notify_*() family of functions, and the do_*emit()
   functions now take an extra arg, for properly tracking both the executor
   and the speaker when spoofing (@pemit/spoof, etc). [MG]

Major changes:
 * Built-in attributes are now stored in the database. This means that
   @attribute no longer needs to be in an @startup, as it will persist
   across reboots and shutdowns. The attribute_alias option in .cnf
   files is now deprecated as a result. [MG]
 * The database now uses a new versioning scheme (alongside the old
   one, for backwards compatability), using incrementing integers
   instead of bitwise flags. Ideas by [GM] and Covenent. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by
   Padraic. [SW]
 * Objects belonging to destroyed players now get chowned to a
   configurable player (probate_judge in mush.cnf) instead of
   God. [SW]
 * Commands involving movement now check the enactor is a
   player/thing, instead of just relying on the command's
   restriction. [MG]
 * @switch, switch(), @[in]filter and attribute @locks (foo:bar) now
   do lte/gte wildcard matches on <=foo and >=foo patterns. Inspired
   by Wiggles. [MG]
 * New channel mogrifier, MOGRIFY`NOBUFFER, can be used to exclude
   certain @chats from the channel's recall buffer. Suggested by
   Wiggles. [MG]
 * Nospoof players now see the nospoof header on @cemits, making
   @nscemit actually have some use. Report by rimnar@M*U*S*H. [MG]
 * The login screen WHO can now be overridden using the who_file
   config option, which can be set as the path to a textfile or an
   obj/attr, like connect_file et al. From suggestions by Paige,
   Trelane and Mercutio. [MG]
 * Talek's chunk attribute storage system, which pages attribute